force-app/main/default/objects/Amex_Statement__c/Amex_Statement__c.object-meta.xml
<CustomObject>
    <description
  >System for tracking Amex statements and sending reminders to complete expense reports in Concur.</description>
    <label>Amex Statement</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amex Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>