force-app/main/default/objects/Amex_Statement__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>Statement closing date for this Amex Statement.</description>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>