force-app/main/default/objects/Amex_Statement__c/fields/Concur_Write_Up__c.field-meta.xml
<CustomField>
    <fullName>Concur_Write_Up__c</fullName>
    <formula
  >HYPERLINK(&quot;https://erepublic2.sharepoint.com/:w:/g/finance/EU7SLgWylpNNuWYYz1qe9EwB1_9TQlgiT7rsxdz1z2eHNg?e=ANiHzf&quot;, &quot;Concur - Expense Report Instructions &amp; FAQ&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concur Write-Up</label>
    <type>Text</type>
</CustomField>