force-app/main/default/objects/Amex_Statement__c/fields/Control__c.field-meta.xml
<CustomField>
    <fullName>Control__c</fullName>
    <description
  >Specifies the control number for the cards listed on this Amex Statement.</description>
    <inlineHelpText
  >Specifies the control number for the cards listed on this Amex Statement.</inlineHelpText>
    <label>Control</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>11004</fullName>
            </value>
            <value>
                <fullName>11007</fullName>
            </value>
            <value>
                <fullName>21005</fullName>
            </value>
            <value>
                <fullName>21006</fullName>
            </value>
            <value>
                <fullName>21009</fullName>
            </value>
            <value>
                <fullName>51002</fullName>
            </value>
            <value>
                <fullName>61003</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>