force-app/main/default/objects/Amex_Statement__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description
  >This is the date that will be sent out to users as the due date that the Amex report must be submitted by.</description>
    <inlineHelpText
  >This is the date that will be sent out to users as the due date that the Amex report must be submitted by.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>