force-app/main/default/objects/Amex_Statement__c/fields/Late_Notices_Sent__c.field-meta.xml
<CustomField>
    <fullName>Late_Notices_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Late Notices Sent</label>
    <type>Checkbox</type>
</CustomField>