force-app/main/default/objects/Amex_Statement__c/fields/Number_of_Outstanding_Statements__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Outstanding_Statements__c</fullName>
    <description
  >Shows the number of statements that are still outstanding for this month for this control group.</description>
    <label>Reports Outstanding</label>
    <summaryFilterItems>
        <field>Amex_Card_Statement__c.Report_Status__c</field>
        <operation>equals</operation>
        <value>Outstanding</value>
    </summaryFilterItems>
    <summaryForeignKey
  >Amex_Card_Statement__c.Amex_Statement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>