force-app/main/default/objects/Amex_Statement__c/fields/Reports_Received__c.field-meta.xml
<CustomField>
    <fullName>Reports_Received__c</fullName>
    <description
  >The number of reports that have been received so far for this Amex Statement.</description>
    <inlineHelpText
  >The number of reports that have been received so far for this Amex Statement.</inlineHelpText>
    <label>Reports Received</label>
    <summaryFilterItems>
        <field>Amex_Card_Statement__c.Report_Status__c</field>
        <operation>equals</operation>
        <value>Received - On-time, Received - Late</value>
    </summaryFilterItems>
    <summaryForeignKey
  >Amex_Card_Statement__c.Amex_Statement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>