force-app/main/default/objects/Amex_Statement__c/fields/Send_Notices__c.field-meta.xml
<CustomField>
    <fullName>Send_Notices__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Hidden field used to trigger workflow process for sending out emails to each of the outstanding Amex Card Holders.</description>
    <inlineHelpText
  >Hidden field used to trigger workflow process for sending out emails to each of the outstanding Amex Card Holders.</inlineHelpText>
    <label>First Notices Sent</label>
    <type>Checkbox</type>
</CustomField>