force-app/main/default/objects/Amex_Statement__c/fields/Send_Second_Notice_del__c.field-meta.xml
<CustomField>
    <fullName>Send_Second_Notice_del__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Checking this box will email out the second notice to the Card Holder or Admin for all outstanding Amex Card Statements, and copy management.</description>
    <inlineHelpText
  >Checking this box will email out the second notice to the Card Holder or Admin for all outstanding Amex Card Statements, and copy management.</inlineHelpText>
    <label>Second Notices Sent</label>
    <type>Checkbox</type>
</CustomField>