force-app/main/default/objects/Amex_Statement__c/fields/Statements__c.field-meta.xml
<CustomField>
    <fullName>Statements__c</fullName>
    <description
  >Shows the number of statements for this month for this control group.</description>
    <label>Number of Statements</label>
    <summaryForeignKey
  >Amex_Card_Statement__c.Amex_Statement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>