force-app/main/default/objects/Amex_Statement__c/fields/Total_Balances__c.field-meta.xml
<CustomField>
    <fullName>Total_Balances__c</fullName>
    <description
  >Gives the total of the balances for all of the statements for this month for this control group.</description>
    <inlineHelpText
  >Gives the total of the balances for all of the statements for this month for this control group.</inlineHelpText>
    <label>Total Balances</label>
    <summarizedField>Amex_Card_Statement__c.Balance__c</summarizedField>
    <summaryForeignKey
  >Amex_Card_Statement__c.Amex_Statement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>