force-app/main/default/objects/Amex_Statement__c/fields/Warning__c.field-meta.xml
<CustomField>
    <fullName>Warning__c</fullName>
    <formula
  >&quot;You are about to send out email notices to the Amex users with outstanding reports for this control group.&quot;&amp;BR()&amp;BR()&amp;  &quot;Click &apos;Save&apos; to send the emails.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warning</label>
    <type>Text</type>
</CustomField>