force-app/main/default/objects/Amex_Statement__c/listViews/Amex_Statements_This_Month.listView-meta.xml
<ListView>
    <fullName>Amex_Statements_This_Month</fullName>
    <columns>NAME</columns>
    <columns>Close_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Total_Balances__c</columns>
    <columns>Number_of_Outstanding_Statements__c</columns>
    <columns>Reports_Received__c</columns>
    <columns>Send_Notices__c</columns>
    <columns>Send_Second_Notice_del__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Due_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Amex Statements - This Month</label>
</ListView>